vw de secciones anteriores excepto project page

--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -2,9 +2,9 @@ extends _templates/layout.pug
 block preloader
 	//- .preloader.color-3
 block content
-	.message-section.snj-container-fluid
-		.row
-			.center-wrapper.snj-col-9.offset-1.snj-col-md-6.offset-md-2
+	.message-section.snj-container-fluid.center-content
+		.row.center-margin
+			.center-wrapper.snj-col-9.offset-1.snj-col-md-8.offset-md-2.snj-col-lg-6.offset-lg-2
 				
 				h2.subtitle-block.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Get in touch.
 				//- form inputs
