--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -31,16 +31,16 @@ mixin icon-arrow
 
 //- video player icons
 mixin video-play-icon
-	svg.icon-video(xmlns="http://www.w3.org/2000/svg" width="17.01px" height="32.01px" viewBox="0 0 17.01 32.01")
+	svg.icon-video.play-video(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17.01 32.01")
 		path(d="M.29,31.71h0a1,1,0,0,1,0-1.41L14.6,16,.31,1.71A1,1,0,0,1,.31.29h0a1,1,0,0,1,1.42,0l15,15a1,1,0,0,1,0,1.41l-15,15A1,1,0,0,1,.29,31.71Z")
 
 mixin video-pause-icon
-	svg.icon-video(xmlns="http://www.w3.org/2000/svg" width="21.69px" height="32px" viewBox="0 0 21.69 32")
+	svg.icon-video.pause-video(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.69 32")
 		rect(x="19.69" width="2" height="32" rx="1" ry="1")
 		rect(width="2" height="32" rx="1" ry="1")
 
 mixin video-exit-icon
-	svg.icon-video(xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 32 32")
+	svg.icon-video.exit-video(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32")
 		rect(x="15" y="-6.21" width="2" height="44.43" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
 		rect(x="-6.21" y="15" width="44.43" height="2" rx="1" ry="1" transform="translate(-6.63 16) rotate(-45)")
 
@@ -64,11 +64,6 @@ mixin tw-icon
 	svg.tw-icon(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22.77 18" xml:space="preserve")
 		path(d="M20.25,4.41V5A13,13,0,0,1,7.11,18,12.9,12.9,0,0,1,0,15.93,4.75,4.75,0,0,0,1.17,16a9.3,9.3,0,0,0,5.76-2,4.48,4.48,0,0,1-4.32-3.15,3.06,3.06,0,0,0,.9.09,4.56,4.56,0,0,0,1.17-.18A4.61,4.61,0,0,1,1,6.39V6.3a5.54,5.54,0,0,0,2.07.63A4.48,4.48,0,0,1,1.17,3.15,4.68,4.68,0,0,1,1.8.9a13.12,13.12,0,0,0,9.54,4.77,3.87,3.87,0,0,1-.18-1.08A4.63,4.63,0,0,1,15.84,0a4.76,4.76,0,0,1,3.42,1.44,10.76,10.76,0,0,0,3-1.17,4.43,4.43,0,0,1-2.07,2.52,12.41,12.41,0,0,0,2.61-.72A15.25,15.25,0,0,1,20.25,4.41Z")
 
-//- mixin link-icon-2
-//- 	svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.54 20" height="20" width="21.54")
-//- 		path(d="M7.69,6.15H12V8.34H12a4.7,4.7,0,0,1,4.2-2.19c4.5,0,5.33,2.8,5.33,6.44V20H17.1V13.43c0-1.57,0-3.58-2.31-3.58s-2.66,1.7-2.66,3.47V20H7.69Z")
-//- 		path(d="M0,6.15H4.62V20H0Z")
-//- 		path(d="M4.62,2.31A2.31,2.31,0,1,1,2.31,0,2.32,2.32,0,0,1,4.62,2.31Z")
 //- logo
 
 mixin logo-jb
