--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -7,7 +7,7 @@ block content
 		.row
 			.center-wrapper
 				a.about-block.offset-1.snj-col-10.offset-sm-2.snj-col-sm-5(href="message.html")
-					h2.subtitle-block.sub-1.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Get in Touch
+					h2.subtitle-block.sub-1.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Get in touch
 
 					h2.subtitle-block.sub-2.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Contact Us
 
