--- a/dev/scss/views/_message.scss
+++ b/dev/scss/views/_message.scss
@@ -3,40 +3,36 @@
 	background-color: $light-orange;
 	color:$dark-brown;
 	display: flex;
-	flex-direction: column;
+	// flex-direction: column;
 	justify-content: center;
-	// .center-wrapper{
-	// 	margin-top: -6px;
-	// }
 	@media(min-width: 768px){
-		display: block;
 		.center-wrapper{
-			// margin-top: 30px;
-			padding-top: 265px;
+			// padding-top: 259px;
 		}
 	}
-	// @media(min-width: 1282px){
-	// 	.center-wrapper{
-	// 		// margin-top: getvw(30vw);
-	// 		padding-top: getvw(265vw);
-	// 	}
-	// }
+	@media(min-width: 1282px){
+		.center-wrapper{
+			// padding-top: getvw(259vw);
+		}
+	}
 	.subtitle-block{
 		position: relative;
 		width: 100%;
-		height: 18px;
-		line-height: 22px;
-		margin-bottom: 20px;
+		height: getvwmob(18vw);
+		line-height: getvwmob(22vw);
+		margin-bottom: getvwmob(20vw);
 		font-weight: 100;
 		letter-spacing: 0.02em;
 		@media(min-width: 768px){
-			margin-bottom: 24px;
+			height: 18px;
+			line-height: 22px;
+			margin-bottom: 29px;
 		}
-		// @media(min-width: 1282px){
-		// 	height: getvw(18vw);
-		// 	line-height: getvw(22vw);
-		// 	margin-bottom: getvw(24vw);
-		// }
+		@media(min-width: 1282px){
+			height: getvw(18vw);
+			line-height: getvw(22vw);
+			margin-bottom: getvw(29vw);
+		}
 	}
 }
 // input
@@ -49,11 +45,11 @@
 		width: 100%;
 		padding-left: 11.11%;
 		@media(min-width: 768px){
+			padding-left: 16.666667%;
+		}
+		@media(min-width: 1282px){
 			padding-left: 33.8333%;
 		}
-		// @media(min-width: 1282px){
-		// 	padding-left: 33.8333%;
-		// }
 		.inputs-flex{
 			display: flex;
 			flex-direction: column;
@@ -64,28 +60,25 @@
 			@media(min-width: 768px){
 				height: 156px;
 			}
-			// @media(min-width: 1282px){
-			// 	height: getvw(156vw);
-			// }
+			@media(min-width: 1282px){
+				height: getvw(156vw);
+			}
 		}
 		.input-wrapper{
 			width: 100%;
 			flex-shrink: 0;
 			display: block;
 			position: relative;
-			// @media(min-width: 1282px){
-			// 	margin-bottom: getvw(2vw);
-			// }
-
+			@media(min-width: 1282px){
+				margin-bottom: getvw(2vw);
+			}
 			input, 
 			textarea{
-				font-size: 12px;
+				font-size: getvwmob(12vw);
 				width: inherit;
-				// height: 100%;
-				height: 30px;
-				padding: 10px 0;
+				height: getvwmob(30vw);
+				padding: getvwmob(10vw) 0;
 				font-family: 'TitlingGothicFB light';
-				// position: relative;
 				color:$cream;
 				background-color: transparent;
 				display: block;
@@ -94,27 +87,23 @@
 				@media(min-width: 768px){
 					font-size: 16px;
 					height: 50px;
+					padding: 10px 0;
 				}
-				// @media(min-width: 1282px){
-				// 	font-size: getvw(16vw);
-				// 	padding: getvw(10vw) 0;
-				// 	height: getvw(50vw);
-				// }
+				@media(min-width: 1282px){
+					font-size: getvw(16vw);
+					padding: getvw(10vw) 0;
+					height: getvw(50vw);
+				}
 			}
 			label{
 				font-family: 'TitlingGothicFB light';
-				font-size: 12px;
+				font-size: getvwmob(12vw);
 				letter-spacing: 0.02em;
-				// pointer-events: none;
 				@include transitions-ease(.4s);
 				&.placeholder{
-					// pointer-events: none;
 					position: absolute;
 					left: 0;
 					top: 23.5%;
-					// top: 50%;
-					// transform: translateY(-50%);
-					// opacity: 1;
 					animation-duration: 1000ms;
 					&.active{
 						animation-name: none;
@@ -125,60 +114,57 @@
 					font-size: 16px;
 					&.placeholder{
 						top: 31%;
-
 					}
 				}
-				// @media(min-width: 1282px){
-				// 	font-size: getvw(16vw);
-				// }
-
+				@media(min-width: 1282px){
+					font-size: getvw(16vw);
+				}
 				&.policy{
-					font-size: 10px;
+					font-size: getvwmob(10vw);
 					@media(min-width: 768px){
 						font-size: 12px;
 					}
-					// @media(min-width: 1282px){
-					// 	font-size: getvw(12vw);
-					// }
+					@media(min-width: 1282px){
+						font-size: getvw(12vw);
+					}
 				}
 			}
 			textarea{
-				padding: 8px 0 10px;
+				padding: getvwmob(8vw) 0 getvwmob(10vw);
 				resize: none;
 				@include transitions-ease(.4s);
 				&:focus{
-					height: 96px;
+					height: getvwmob(96vw);
 				}
 				@media(min-width: 768px){
-					padding-top: 19px;
+					padding: 19px 0 10px;
 					&:focus{
 						height: 156px;
 					}
 				}
-				// @media(min-width: 1282px){
-				// 	padding: getvw(19vw) 0 getvw(10vw);
-				// 	// padding-top: getvw(16vw);
-				// 	&:focus{
-				// 		height: getvw(156vw);
-				// 	}
-				// }
+				@media(min-width: 1282px){
+					padding: getvw(19vw) 0 getvw(10vw);
+					&:focus{
+						height: getvw(156vw);
+					}
+				}
 			}
 			textarea ~ label.placeholder{
-				// top: 24%;
 				@media(min-width: 768px){
 					top: 34%;
 				}
 			}
 
 			textarea:focus ~ label.placeholder{
-				top: 16px;
+				top: getvwmob(16vw);
 				animation-name: none;
 				@media(min-width: 768px){
+					top: 16px;
 					transform: translateY(0);
 				}
-				// @media(min-width: 1282px){
-				// 	top: getvw(16vw);
-				// }
+				@media(min-width: 1282px){
+					top: getvw(16vw);
+				}
 			}
 
 			//-active state
@@ -197,12 +183,15 @@
 			}
 			span.bar{
 				width: 100%;
-				height: 2px;
+				height: getvwmob(2vw);
 				background-color: $cream;
 				display: block;
-				// @media(min-width: 1282px){
-				// 	height: getvw(2vw);
-				// }
+				@media(min-width: 768px){
+					height: 2px;
+				}
+				@media(min-width: 1282px){
+					height: getvw(2vw);
+				}
 			}
 			// &.textarea-wrapper{
 			// 	background-color: red;
@@ -217,32 +206,33 @@
 }
 // 	// checkbox
 .message-section .inputs-container #check-box{
-	padding: 10px 0;
+	padding: getvwmob(10vw) 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	height: auto;
 	@media(min-width: 768px){
 		padding: 20px 0;
+		height: 50px;
 	}
-	// @media(min-width: 1282px){
-	// 	padding: getvw(20vw) 0;
-	// }
+	@media(min-width: 1282px){
+		padding: getvw(20vw) 0;
+		height: getvw(50vw);
+	}
 	label{
 		position: relative;
 		cursor: pointer;
 		display: block;
 		@include unselectable;
-		padding-left: 14px;
+		padding-left: getvwmob(14vw);
 		line-height: 1.5em;
 
 		@media (min-width: 768px){
 			padding-left: 18px;
 		}
-
-		// @media(min-width: 1282px){
-		// 	padding-left: getvw(18vw);
-		// }
+		@media(min-width: 1282px){
+			padding-left: getvw(18vw);
+		}
 	}
 	input.checkbox{
 		position: absolute;
@@ -254,20 +244,24 @@
 	}
 	.checkmark{
 		position: absolute;
-		border: solid 2px $dark-brown;
+		border: solid getvwmob(2px) $dark-brown;
 		border-radius: 100%;
 		cursor: pointer;
-		height: 9px;
-		width: 9px;
+		height: getvwmob(9vw);
+		width: getvwmob(9vw);
 		top: 0.25em;
-		left: 0px;
-		// transform: translateY(-50%);
+		left: 0;
 		@include transitions-ease(.4s);
-		// @media(min-width: 1282px){
-		// 	border: solid getvw(2vw) $dark-brown;;
-		// 	height: getvw(9vw);
-		// 	width: getvw(9vw);
-		// }
+		@media(min-width: 768px){
+			border: solid 2px $dark-brown;
+			height: 9px;
+			width: 9px;
+		}
+		@media(min-width: 1282px){
+			border: solid getvw(2vw) $dark-brown;;
+			height: getvw(9vw);
+			width: getvw(9vw);
+		}
 	}
 	input:checked ~ .checkmark{
 		background-color: $dark-brown;
@@ -275,19 +269,19 @@
 }
 .message-section .arrow-container{
 	width: auto;
-	margin-top: 4px;
+	margin-top: getvwmob(4vw);
 	padding-left: 11.11%;
 	position: relative;
 	display: inline-flex;
-	@include transitions-ease(.4s)
+	@include transitions-ease(.4s);
 	.arrow-right{
-		margin-left: -20px;
+		margin-left: getvwmob(-20vw);
 		pointer-events: none;
 		span{
 			color: $black;
-			line-height: 16px;
-			height: 13px;
-			font-size: 16px;
+			font-size: getvwmob(16vw);
+			line-height: getvwmob(16vw);
+			height: getvwmob(13vw);
 			font-family: 'Nocturne Serif ExtraBold';
 			letter-spacing: .02em;
 		}
@@ -320,9 +314,9 @@
 	}
 	@media(min-width: 768px){	
 		margin-top: 16px;
-		// left: 33.33%;
-		padding-left: 33.8333%;
+		padding-left: 16.666667%;
 		.arrow-right{
+			margin-left: -20px;
 			span{
 				font-size: 22px;
 				line-height: 20px;
@@ -331,16 +325,17 @@
 			}
 		}	
 	}
-	// @media(min-width: 1282px){
-	// 	margin-top: getvw(16vw);
-	// 	.arrow-right{
-	// 		margin-left: getvw(-20vw);
-	// 		span{
-	// 			line-height: getvw(22vw);
-	// 			height: getvw(20vw);
-	// 			font-size: getvw(19vw);
-	// 			margin-left: getvw(19vw);
-	// 		}
-	// 	}
-	// }
+	@media(min-width: 1282px){
+		margin-top: getvw(16vw);
+		padding-left: 33.8333%;
+		.arrow-right{
+			margin-left: getvw(-20vw);
+			span{
+				font-size: getvw(22vw);
+				line-height: getvw(20vw);
+				height: getvw(19vw);
+				margin-left: getvw(19vw);
+			}
+		}
+	}
 }
