--- a/dev/scss/views/_thanks.scss
+++ b/dev/scss/views/_thanks.scss
@@ -5,36 +5,28 @@
 	justify-content: center;
 	background-color: #cdbda5;
 	color: $dark-brown;
-	@media(min-width: 768px){
-		// margin-top: -2px;
-	}
-	@media(min-width: 1282px){
-		// margin-top: getvw(-2vw);
-	}
 	.title-block{
 		color: $black;
-		margin-bottom: 16px;
-		line-height: 20px;
-		height: 18px;
+		margin-bottom: getvwmob(16vw);
+		line-height: getvwmob(20vw);
+		height: getvwmob(18vw);
 		position: relative;
 		letter-spacing: 0.018em;
 		@media(min-width: 768px){
 			margin-bottom: 12px;
-			// margin-top: 8px;
 			line-height: 44px;
 			height: 40px;
 			letter-spacing: .02em;
 		}
-		// @media(min-width: 1282px){
-		// 	margin-bottom: getvw(12vw);
-		// 	// margin-top: getvw(8vw);
-		// 	line-height: getvw(44vw);
-		// 	height: getvw(40vw);
-		// }
+		@media(min-width: 1282px){
+			margin-bottom: getvw(12vw);
+			line-height: getvw(44vw);
+			height: getvw(40vw);
+		}
 	}
 	p{
 		padding-left: 11.11%;
-		margin-bottom: 32px;
+		margin-bottom: getvwmob(32vw);
 		line-height: 1.57em;
 		position: relative;
 		letter-spacing: 0.02em;
@@ -43,16 +35,16 @@
 			line-height: 1.8em;
 			padding-left: 16.6667%;
 		}
-		// @media(min-width: 1282px){
-		// 	margin-bottom: getvw(15vw);
-		// }
+		@media(min-width: 1282px){
+			margin-bottom: getvw(15vw);
+		}
 	}
 	.social-wrapper{
 		padding: 0 11.11% ;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		padding-right: 6px;
+		padding-right: getvwmob(6vw);
 		width: 88.57%;
 		.social-link{
 			height: 18px;
@@ -69,10 +61,9 @@
 					fill: $cream;
 				}
 			}
-
-			// @media (min-width: 1282px){
-			// 	height: getvw(18vw);
-			// }
+			@media (min-width: 1282px){
+				height: getvw(18vw);
+			}
 		}
 
 		@media(min-width: 768px){
