project pages and icons vw sizes

--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -1,32 +1,32 @@
 mixin close-icon
-	svg.close-icon(xmlns="http://www.w3.org/2000/svg" width="13px" height="13px" viewbox="0 0 13 13")
+	svg.close-icon(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 13 13")
 		path(d="M7.883,6.502 L12.715,11.335 C13.097,11.716 13.097,12.334 12.715,12.715 C12.334,13.097 11.716,13.097 11.335,12.715 L6.502,7.883 L1.669,12.715 C1.288,13.097 0.670,13.097 0.289,12.715 C-0.093,12.334 -0.093,11.716 0.289,11.335 L5.121,6.502 L0.289,1.669 C-0.093,1.288 -0.093,0.670 0.289,0.289 C0.670,-0.093 1.288,-0.093 1.669,0.289 L6.502,5.121 L11.335,0.289 C11.716,-0.093 12.334,-0.093 12.715,0.289 C13.097,0.670 13.097,1.288 12.715,1.669 L7.883,6.502 Z")
 
 
 mixin back-icon-btn
-	svg(xmlns="http://www.w3.org/2000/svg" width="35px" height="13px" viewBox="0 0 35 13")
+	svg.back-icon-btn(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 13")
 		path(d="M2.41,6.5l4.8-4.79A1,1,0,0,0,5.79.29L.29,5.79a1,1,0,0,0,0,1.42l5.5,5.5a1,1,0,1,0,1.42-1.42Z")
 		rect(x="20.77" y="-6.76" width="1.95" height="26.52" rx="0.97" ry="0.97" transform="translate(28.24 -15.24) rotate(90)")
 
 
 
 mixin next-arrow-90
-	svg(xmlns="http://www.w3.org/2000/svg" width="90px" height="12px" viewBox="0 0 90 12")
+	svg.next-arrow-90(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 12")
 		path(d="M84.72,11.71l5-5a1,1,0,0,0,0-1.42l-5-5a1,1,0,0,0-1.42,0h0a1,1,0,0,0,0,1.42L87.59,6,83.3,10.29a1,1,0,0,0,0,1.42h0A1,1,0,0,0,84.72,11.71Z")
 		rect(y="5" width="81.99" height="2" rx="1" ry="1")
 
 mixin next-arrow-300
-	svg(xmlns="http://www.w3.org/2000/svg" width="300px" height="12px" viewBox="0 0 300 12")
+	svg.next-arrow-300(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 300 12")
 		path(d="M294.72,11.71l5-5a1,1,0,0,0,0-1.42l-5-5a1,1,0,0,0-1.42,0h0a1,1,0,0,0,0,1.42L297.59,6l-4.29,4.28a1,1,0,0,0,0,1.42h0A1,1,0,0,0,294.72,11.71Z")
 		rect(y="5" width="291.99" height="2" rx="1" ry="1")
 
 mixin arrow-scroll
-	svg(xmlns="http://www.w3.org/2000/svg" width="12px" height="7px" viewBox="0 0 12 7.01")
+	svg.arrow-scroll-icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 7.01")
 		path(d="M.29,1.73l5,5a1,1,0,0,0,1.42,0l5-5a1,1,0,0,0,0-1.42h0a1,1,0,0,0-1.42,0L6,4.6,1.71.31A1,1,0,0,0,.29.31h0A1,1,0,0,0,.29,1.73Z")
 			
 //- arrow icpon
 mixin icon-arrow
-	svg.icon-arrow(xmlns="http://www.w3.org/2000/svg" width="7.01px" height="12.01px" viewBox="0 0 7.01 12.01")
+	svg.icon-arrow(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7.01 12.01")
 		path(d="M1.72,11.72l5-5a1,1,0,0,0,0-1.42h0l-5-5A1,1,0,0,0,.3.29h0a1,1,0,0,0,0,1.41h0L4.59,6,.3,10.3a1,1,0,0,0,0,1.41h0a1,1,0,0,0,1.41,0Z")
 
 //- video player icons
