--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -33,6 +33,7 @@
 @import 'modules/_slider';
 @import 'modules/_preloader';
 @import 'modules/_side-nav';
+@import 'modules/_icons';
 
 .img-tester{
 	opacity: .4;
