--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -4,22 +4,22 @@
 	padding: 0;
 	position: relative;
 	.project-title{
-		font-size: 22px;
+		font-size: getvwmob(22vw);
 		font-family: 'Nocturne Serif ExtraBold';
 		@media(min-width: 768px){
 			font-size: 30px;
 		}
-		// @media(min-width: 1282px){
-		// 	font-size: getvw(30vw);
-		// }
+		@media(min-width: 1282px){
+			font-size: getvw(30vw);
+		}
 	}
 }
 section.project-about{
 	background-color: $orange;
 	color: $cream;
-	height: 460px;
+	height: getvwmob(460vw);
 	width: 100%;
-	padding: 115px 10px 0;
+	padding: getvwmob(115vw) getvwmob(10vw) 0;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -34,12 +34,11 @@ section.project-about{
 		padding: 196px 0 0;
 		margin-bottom: 10px;
 	}
-
-	// @media(min-width: 1282px){
-	// 	height: getvw(525vw);
-	// 	padding: getvw(196vw) 0 0;
-	// 	margin-bottom: getvw(10vw)
-	// }
+	@media(min-width: 1282px){
+		height: getvw(525vw);
+		padding: getvw(196vw) 0 0;
+		margin-bottom: getvw(10vw)
+	}
 
 	.info-wrapper{
 		text-align: center;
@@ -50,7 +49,6 @@ section.project-about{
 		h2, h1, span{
 			display: block;
 		}
-
 		.subtitle-wrap{
 			position: absolute;
 			width: 100%;
@@ -70,55 +68,56 @@ section.project-about{
 				height: 55%;
 				padding-top: 2px;
 			}
-			// @media (min-width: 1282px){
-			// 	padding-top: getvw(2vw);
-			// }
+			@media (min-width: 1282px){
+				padding-top: getvw(2vw);
+			}
 		}
-
 		.subtitle-block{
-			font-size: 12px;
-			bottom: 4px;
+			font-size: getvwmob(12vw);
+			bottom: getvwmob(4px);
 			width: 60%;
 			margin-left: 20%;
 			font-family: 'TitlingGothicFB Standard';
 			position: absolute;
 			font-weight: 100;
-			// @media(min-width: 1282px){
-			// 	font-size: getvw(12vw);
-			// }
+			@media(min-width: 768px){
+				font-size: 12px;
+				bottom: 4px;
+				width: 50%;
+				margin-left: 25%;
+				font-family: 'TitlingGothicFB light';
+			}
+			@media(min-width: 1282px){
+				font-size: getvw(12vw);
+				bottom: getvw(4vw);
+			}
 		}
 
 		.display-number{
 			position: relative;
 			color: $black;
-			font-size: 165px;
-			line-height: 166px;
+			font-size: getvwmob(165vw);
+			line-height: getvwmob(166vw);
 			font-family: 'TitlingGothicFB light';
 			left: -2%;
 			top: 0;
 			animation-duration:1s;
 			z-index: -1;
 			letter-spacing: .02em;
-			height: 133px;
-		}
-		@media(min-width: 768px){
-			.subtitle-block{
-				width: 50%;
-				margin-left: 25%;
-				font-family: 'TitlingGothicFB light';
-			}
-			.display-number{
+			height: getvwmob(133vw);
+			@media(min-width: 768px){
+				font-size: 165px;
+				line-height: 166px;
 				letter-spacing: inherit;
 				left: 2%;
+				height: 133px;
+			}
+			@media(min-width: 1282px){
+				font-size: getvw(165vw);
+				line-height: getvw(166vw);
+				height: getvw(133vw);
 			}
 		}
-		// @media(min-width: 1282px){
-		// 	.display-number{
-		// 		font-size: getvw(165vw);
-		// 		line-height: getvw(166vw);
-		// 		height: getvw(133vw);
-		// 	}
-		// }
 	}
 
 	.especifications-wrap{
@@ -129,18 +128,17 @@ section.project-about{
 	aside.especifications{
 		background-color: $brown;
 		width: 100%;
-		font-size: 12px;
-		padding: 40px 0 37px;
-		transform:translate3d(0, 181px, 0);
+		padding: getvwmob(40vw) 0 getvwmob(37vw);
+		transform:translate3d(0, getvwmob(181vw), 0);
 		position: absolute;
 		bottom: 0;
 		&:after{
 			content: "";
-			width: 2px;
-			height: 75px;
+			width: getvwmob(2vw);
+			height: getvwmob(75vw);
 			position: absolute;
 			left: 50%;
-			top: -75px;
+			top: getvwmob(-75vw);
 			background-color: $brown;
 		}
 		@media(min-width: 768px){
@@ -150,17 +148,14 @@ section.project-about{
 			display: flex;
 			flex-direction: row;
 			height: 123px;
-			@media(min-width: 768px){
-				&:after{
-					display: none;
-				}
+			&:after{
+				display: none;
 			}
 		}
-		// @media(min-width: 1282px){
-		// 	font-size: getvw(12vw);
-		// 	padding: 0 0 getvw(64vw);
-		// 	height: getvw(123vw);
-		// }
+		@media(min-width: 1282px){
+			padding: 0 0 getvw(64vw);
+			height: getvw(123vw);
+		}
 		.snj-row{
 			margin-right: 0;
 			margin-left: 0;
@@ -170,25 +165,25 @@ section.project-about{
 			}
 		}
 		.especific-item{
-			padding: 21px 0 17px;
+			padding: getvwmob(21vw) 0 getvwmob(17vw);
 			position: relative;
 			h4, h5{
-				font-size: 12px;
+				font-size: getvwmob(12vw);
 				padding-left: 20%;
 				animation-duration: 700ms;
 				font-weight: 100;
 			}
 			h4{
-				margin-bottom: 6px;
+				margin-bottom: getvwmob(6vw);
 				position: relative;
 				font-family: 'TitlingGothicFB Standard';
 			}
 			span.line-item{
 				position: absolute;
-				top: 0px;
+				top: 0;
 				left: 10%;
-				width: 10px;
-				height: 2px;
+				width: getvwmob(10vw);
+				height: getvwmob(2vw);
 				.line{
 					background-color: $cream;
 					width: 100%;
@@ -200,28 +195,33 @@ section.project-about{
 			}
 			@media(min-width: 768px){
 				padding: 12px 0 12px 10px;
-				span.line-item{
-					left: 0;
-				}
 				h4, h5{
+					font-size: 12px;
 					padding-left: 0;
 				}
+				h4{
+					margin-bottom: 6px;
+				}
+				span.line-item{
+					left: 0;
+					width: 10px;
+					height: 2px;
+				}
 			}
-			// @media(min-width: 1282px){
-			// 	padding: getvw(12vw) 0 getvw(12vw) getvw(10vw);
+			@media(min-width: 1282px){
+				padding: getvw(12vw) 0 getvw(12vw) getvw(10vw);
 
-			// 	h4, h5{
-			// 		font-size: getvw(12vw);
-			// 	}
-			// 	h4{
-			// 		margin-bottom: getvw(6vw);
-			// 	}
-
-			// 	span.line-item{
-			// 		width: getvw(10vw);
-			// 		height: getvw(2vw);
-			// 	}
-			// }
+				h4, h5{
+					font-size: getvw(12vw);
+				}
+				h4{
+					margin-bottom: getvw(6vw);
+				}
+				span.line-item{
+					width: getvw(10vw);
+					height: getvw(2vw);
+				}
+			}
 		}
 	}
 }
@@ -229,14 +229,14 @@ section.project-description{
 	background-color: $gray;
 	width: 100%;
 	display: flex;
-	padding:206px 10px 31px;
+	padding:getvwmob(206vw) getvwmob(10vw) getvwmob(31vw);
 	.project-title{
-		margin-bottom: 13px;
+		margin-bottom: getvwmob(13vw);
 		width: 100%;
 		position: relative;
 	}
 	p{
-		margin-bottom: 15px;
+		margin-bottom: getvwmob(15vw);
 	}
 	a{
 		color: $cream;
@@ -272,23 +272,23 @@ section.project-description{
 			width: 50%;
 		}
 	}
-	// @media(min-width: 1282px){
-	// 	margin-bottom: getvw(10vw);
-	// 	padding: getvw(65vw) 0 getvw(128vw);
-	// 	.project-title{
-	// 		margin-top: getvw(50vw);
-	// 		margin-bottom: getvw(50vw);
-	// 	}
-	// 	p{
-	// 		margin-bottom: getvw(16vw);
-	// 	}
-	// 	.paragraph-left{
-	// 		padding-right: getvw(5vw);
-	// 	}
-	// 	.paragraph-right{
-	// 		padding-left: getvw(5vw);
-	// 	}
-	// }
+	@media(min-width: 1282px){
+		margin-bottom: getvw(10vw);
+		padding: getvw(65vw) 0 getvw(128vw);
+		.project-title{
+			margin-top: getvw(50vw);
+			margin-bottom: getvw(50vw);
+		}
+		p{
+			margin-bottom: getvw(16vw);
+		}
+		.paragraph-left{
+			padding-right: getvw(5vw);
+		}
+		.paragraph-right{
+			padding-left: getvw(5vw);
+		}
+	}
 }
 [class*="p-photo"]{
 	position: relative;
@@ -298,46 +298,43 @@ section.project-description{
 }
 .p-photo1{
 	width: 100%;
-	height: 525px;
+	height: getvwmob(525vw);
 	overflow: hidden;
-	margin-bottom: 20px;
+	margin-bottom: getvwmob(20vw);
 	img{
 		height: 100%;
-		// top: 5%;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
 	@media(min-width: 768px){
+		height: 525px;
 		margin-bottom: 10px;
 		img{		
 			height: auto;
-			// top: 50%;
-			// left: 50%;
-			// transform: translate(-50%, -50%)
 		}
 	}
-	// @media(min-width: 1282px){
-	// 	height: getvw(525vw);
-	// 	// margin-bottom: getvw(10vw);
-	// }
+	@media(min-width: 1282px){
+		height: getvw(525vw);
+		margin-bottom: getvw(10vw);
+	}
 }
 .img-wrapper{
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 20px;
+	margin-bottom: getvwmob(20vw);
 	@media(min-width: 768px){
 		flex-direction: row;
 		justify-content: space-between;
 		margin-bottom: 10px;
 	}
-	// @media(min-width: 1282px){
-	// 	margin-bottom: getvw(10vw);
-	// }
+	@media(min-width: 1282px){
+		margin-bottom: getvw(10vw);
+	}
 }
 .p-photo3, .p-photo2{
-	height: 220px;
+	height: getvwmob(220vw);
 	width: 100%;
 	overflow: hidden;
 	img{
@@ -361,23 +358,23 @@ section.project-description{
 			width: auto;
 		}
 	}
-	// @media(min-width: 1282px){
-	// 	height: getvw(525vw);
-	// 	&.p-photo3,
-	// 	&.p-photo2{
-	// 		width: calc(50% - getvw(5vw));
-	// 	}
-	// }
+	@media(min-width: 1282px){
+		height: getvw(525vw);
+		&.p-photo3,
+		&.p-photo2{
+			width: calc(50% - getvw(5vw));
+		}
+	}
 }
 
 section.video-wrapper{
-	height: 300px;
+	height: getvwmob(300vw);
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	background-size: cover;
-	margin-bottom: 20px;
+	margin-bottom: getvwmob(20vw);
 	background-position:  center;
 	position: relative;
 	&.coffee-video-mini{
@@ -418,14 +415,17 @@ section.video-wrapper{
 		height: 525px;
 		margin-bottom: 10px;
 	}
-	// @media(min-width: 1282px){
-	// 	height: getvw(525vw);
-	// 	margin-bottom: getvw(10vw);
-	// }
+	@media(min-width: 1282px){
+		height: getvw(525vw);
+		margin-bottom: getvw(10vw);
+	}
+
 	.close-video{
 		position: absolute;
 		right: 8.96%;
-		top: 50px;
+		top: getvwmob(50vw);
+		@media(min-width: 768px){top: 50px;}
+		@media(min-width: 1282px){top: getvw(50vw);}
 	}
 	video{
 		position: absolute;
@@ -452,21 +452,23 @@ section.video-wrapper{
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		// padding: 0;
 		position: absolute;
-		bottom: 20px;
+		bottom: getvwmob(20vw);
 		width: 100%;
 		@media(min-width: 768px){
+			bottom: 40px;
 			padding: 0 20px;
 			max-width: 100%;
-			bottom: 40px;
 		}
 		@media(min-width: 992px){
 			padding: 0;
 		}
+		@media(min-width: 1282px){
+			bottom: getvw(40vw);
+		}
 		.time-control{
 			color: $dark-orange;
-			font-size: 10px;
+			font-size: getvwmob(10vw);
 			&.time-mobile{
 				display: inline-block;
 			}
@@ -478,6 +480,11 @@ section.video-wrapper{
 				&.time-mobile{
 					display: none;
 				}
+			}
+			@media(min-width: 1282px){
+				font-size: getvw(12vw);
+				line-height: getvw(12vw);
+				height: getvw(10vw);
 			}
 		}
 		.time-init{
@@ -502,21 +509,11 @@ section.video-wrapper{
 				text-align: left;
 			}
 		}
-		// @media(max-width: 767px){
-		// 	position: absolute;
-		// 	bottom: 20px;
-		// 	width: auto;
-		// 	&.time-init{
-		// 		left: 20px;
-		// 	}
-		// 	&.time-end{
-		// 		right: 20px;
-		// 	}
-		// }
 		.progress-bar-wrapper{
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
+			@media(min-width: 992px){padding: 0 10px;}
 			.progress-bar{
 				position: relative;
 				width: 100%;
@@ -525,10 +522,8 @@ section.video-wrapper{
 				background-color: #312d2b;
 				display: block;
 				cursor: pointer;
-
 				&:hover{
 					height: 5px;
-
 					&:before{
 						content: '';
 						display: block;
@@ -553,9 +548,30 @@ section.video-wrapper{
 						@include none-ease;
 					}
 				}
-			}
-			@media(max-width: 992px){
-				padding: 0 10px;
+				@media(min-width: 768px){
+					.progress-bar{
+						height: 4px;
+						border-radius: 2px;
+						&:hover{
+							height: 5px;
+						}
+						.bar{
+							border-radius: 2px;
+						}
+					}
+				}
+				@media(min-width: 1282px){
+					.progress-bar{
+						height: getve(4vw);
+						border-radius: getvw(2vw);
+						&:hover{
+							height: getvw(5vw);
+						}
+						.bar{
+							border-radius: getvw(2vw);
+						}
+					}
+				}
 			}
 		}
 	}
@@ -566,45 +582,47 @@ section.video-wrapper{
 }
 section.footer-project{
 	width: 100%;
-	padding-top: 76px;
-	padding-bottom: 20px;
+	padding-top: getvwmob(76vw);
+	padding-bottom: getvwmob(20vw);
 	color: $dark-orange;
 	background-color: $medium-orange;
 	font-family: 'TitlingGothicFB Standard';
 	text-align: center;
 	position: relative;
-	@media(min-width: 768px){
-		// height: 525px;
-		padding-top: 220px;
-		display: flex;
-		padding-bottom: 39px;
-	}
-	// @media(min-width: 1282px){
-	// 	// height: getvw(525vw);
-	// 	padding-top: getvw(220vw);
-	// 	padding-bottom: getvw(39vw);
-	// }
+	// medidor background
 	// &:after{
 	// 	content: "";
 	// 	position: absolute;
 	// 	background-color: red;
 	// 	left: 0;
 	// 	width: 100%;
-	// 	height: 20px;
+	// 	height: getvwmob(20vw);
 	// 	top: 0;
 	// }
+	@media(min-width: 768px){
+		// height: 525px;
+		padding-top: 220px;
+		padding-bottom: 39px;
+		display: flex;
+	}
+	@media(min-width: 1282px){
+		// height: getvw(525vw);
+		padding-top: getvw(220vw);
+		padding-bottom: getvw(39vw);
+	}
+
 	.description{	
 		p:not(.copyright){color: $cream;}
 		h3{
 			font-family: 'Nocturne Serif ExtraBold';
 			color: $cream;
-			font-size: 22px;
-			margin: 7px 0 9px;
+			font-size: getvwmob(22vw);
+			margin: getvwmob(7vw) 0 getvwmob(9vw);
 			position: relative;
 			letter-spacing: .02em;
 		}
 		h4{
-			margin-bottom: 38px;
+			margin-bottom: getvwmob(38vw);
 			position: relative;
 			letter-spacing: .02em;
 		}
@@ -615,30 +633,33 @@ section.footer-project{
 		}
 		.copyright{
 			letter-spacing: .02em;
-			margin-top: 74px;
+			margin-top: getvwmob(74vw);
 		}
 		@media(min-width: 768px){
 			h3{
 				font-size: 30px;
-				margin-bottom: 12px;
+				margin:7px 0 12px;
+			}
+			h4{
+				margin-bottom: 38px;
 			}
 			a{display: none}
 			.copyright{
 				margin-top: 168px;
 			}
 		}
-		// @media(min-width: 1282px){
-		// 	h3{
-		// 		font-size: getvw(30vw);
-		// 		margin: getvw(7vw) 0 getvw(12vw);
-		// 	}
-		// 	h4{
-		// 		padding-bottom: getvw(38vw);
-		// 	}
-		// 	.copyright{
-		// 		margin-top: getvw(168vw);
-		// 	}
-		// }
+		@media(min-width: 1282px){
+			h3{
+				font-size: getvw(30vw);
+				margin: getvw(7vw) 0 getvw(12vw);
+			}
+			h4{
+				padding-bottom: getvw(38vw);
+			}
+			.copyright{
+				margin-top: getvw(168vw);
+			}
+		}
 	}
 }
 
@@ -654,36 +675,47 @@ section.footer-project{
 		}
 	}
 }
-a.more-cases{
-	margin-top: 24px;
+.more-cases{
+	margin-top: getvwmob(24vw);
 	color: $cream;
 	@include flexAlignSelfTop;
 	.arrow-wrapper{
 		position: relative;
 		display: flex;
 		flex-direction: row;
-		width: 110px;
+		width: getvwmob(110vw);
 		cursor: pointer;
 		align-items: center;
 		.rectangle-arrow{
 			display: inline-block;
-			height: 2px;
-			width: 82px;
-			margin-right: 1px;
+			height: getvwmob(2vw);
+			width: getvwmob(82vw);
+			margin-right: getvwmob(1vw);
 			background: #ffecd0;
 		}
 	}
-	// @media(min-width: 1282px){
-	// 	margin-top: getvw(24vw);
-	// 	.arrow-wrapper{
-	// 		width: getvw(110vw);
-	// 		.rectangle-arrow{
-	// 			height: getvw(2vw);
-	// 			width: getvw(82vw);
-	// 			margin-right: getvw(1vw);
-	// 		}
-	// 	}
-	// }
+	@media(min-width: 768px){
+		margin-top: 24px;
+		.arrow-wrapper{
+			width: 110px;
+			.rectangle-arrow{
+				height: 2px;
+				width: 82px;
+				margin-right: 1px;
+			}
+		}
+	}
+	@media(min-width: 1282px){
+		margin-top: getvw(24vw);
+		.arrow-wrapper{
+			width: getvw(110vw);
+			.rectangle-arrow{
+				height: getvw(2vw);
+				width: getvw(82vw);
+				margin-right: getvw(1vw);
+			}
+		}
+	}
 	&.prev-case{
 		text-align: left;
 		.arrow-wrapper{
