Home & Menu UI: Responsive tweaks to match PSD, pages ready.

--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -23,6 +23,9 @@ html(class='no-js')
 		link(rel='stylesheet', href='css/app.css')
 
 	body
+		//- .testing.a
+		//- .testing.b
+
 		//- include ../_modules/preloader.pug
 		include ../_modules/icons.pug
 		include ../_modules/header-nav.pug
