--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -49,3 +49,27 @@
 		display: block;
 	}
 }
+
+.testing{
+	position: fixed;
+	z-index: 999999;
+	background-color: red;
+	opacity: .3;
+	pointer-events:none;
+	
+	&.a{
+		width: 100%;
+		height: 102px;
+
+		top: 0;
+		left: 0;
+	}
+	
+	&.b{
+		width: 100%;
+		height: 113px;
+
+		bottom: 0;
+		left: 0;
+	}
+}
