--- a/dev/scss/global/_grid.scss
+++ b/dev/scss/global/_grid.scss
@@ -42,6 +42,11 @@
     padding-right: 35px;
     padding-left: 35px;
   }
+
+  @include vw-desktop {
+    padding-left: getvw(35vw);
+    padding-right: getvw(35vw);
+  }
 }
 
 .snj-row {
