--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -59,7 +59,7 @@
 	
 	&.a{
 		width: 100%;
-		height: 102px;
+		height: 132px;
 
 		top: 0;
 		left: 0;
@@ -67,9 +67,9 @@
 	
 	&.b{
 		width: 100%;
-		height: 113px;
+		height: 210px;
 
-		bottom: 0;
-		left: 0;
+		top: 0;
+		right: 0;
 	}
 }
