--- a/dev/scss/views/_about.scss
+++ b/dev/scss/views/_about.scss
@@ -257,7 +257,7 @@
 				}
 			}
 			@media(min-width: 992px){
-				// padding: 10px 0 0 0;
+				padding: 10px 0 0 0;
 			}
 			@media(min-width: 1282px){
 				padding: getvw(10vw) 0 0 0;
