--- a/dev/scss/views/_contact.scss
+++ b/dev/scss/views/_contact.scss
@@ -324,7 +324,7 @@
 			padding-right: getvw(5vw);
 			font-size: getvw(12vw);
 			a{
-				font-size: getvw(12px);
+				font-size: getvw(12vw);
 			}
 		}
 	}
