--- a/dev/scss/views/_message.scss
+++ b/dev/scss/views/_message.scss
@@ -56,7 +56,7 @@
 			justify-content: flex-end;
 			flex-wrap: nowrap;
 			overflow: hidden;
-			height: 96px;
+			height: getvwmob(98vw);
 			@media(min-width: 768px){
 				height: 156px;
 			}
