--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -870,11 +870,11 @@ section.project-about{
 			left: 0;
 			transform: translate(-10%, 0%)
 		}
-		.slide-container{
-			img{
-				top: 68%;
-			}
-		}
+		// .slide-container{
+		// 	img{
+		// 		top: 68%;
+		// 	}
+		// }
 	}
 	@media(min-width: 992px){
 		.p-photo1 img{
