Optimized overweight images.

--- a/dev/scss/views/_home.scss
+++ b/dev/scss/views/_home.scss
@@ -6,7 +6,7 @@
 // shader wrapper
 .home-bg{
 	background-size: cover;
-	background-image: url("../img/Desert.png");
+	background-image: url("../img/Desert_opt.jpg");
 }
 
 // Display WE
