--- a/dev/scss/views/_ourwork.scss
+++ b/dev/scss/views/_ourwork.scss
@@ -11,7 +11,7 @@
 	}
 }
 .work-bg{
-	background-image: url("../img/work_background.jpg");
+	background-image: url("../img/ourwork_bg_opt.jpg");
 	background-size: 500%;
 	background-position: 50% 15%;
 	position: fixed;
