High Beams: Project images added.

--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -23,8 +23,8 @@ html(class='no-js')
 		link(rel='stylesheet', href='css/app.css')
 
 	body
-		.testing.a
-		.testing.b
+		//- .testing.a
+		//- .testing.b
 
 		//- include ../_modules/preloader.pug
 		include ../_modules/icons.pug
