Future Street Creds images added.

--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -381,6 +381,10 @@ section.video-wrapper{
 		background-image: url("../img/projects/high-beams/09_beams_mini.jpg");
 		background-position: center bottom;
 	}
+	&.future-banner-mini{
+		background-image: url("../img/projects/future-street/09_future.jpg");
+		background-position: center bottom;
+	}
 	&.coffee-video-mini{
 		background-image: url("../img/projects/coffee/9-coffee-mini.jpg");
 		background-position: center bottom;
@@ -766,7 +770,7 @@ section.footer-project{
 	background-image: url("../img/projects/high-beams/01_beams.jpg");
 }
 .project-bg-cred{
-	background-image: url("../img/project_2_bg.jpg");
+	background-image: url("../img/projects/future-street/01_future.jpg");
 }
 // campaign & social media strategy
 .project-bg-suede{
