--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -4,7 +4,7 @@ block preloader
 block content
 	.snj-container-fluid.project-page
 		.row
-			section.project-about
+			section.project-about.project-bg-cred
 				+hero-project("Branding & Design","Future Street Cred","02")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
@@ -26,16 +26,17 @@ block content
 						p The final designs were eventually featured on Hypebae. Have we seen a streetwear brand and credit card company join forces yet? No, but maybe streetwear or sneaker cryptocurrency will actually be the next thing.
 						p What we’ll certainly continue doing is creating anything, whether it’s a one off project or an entire series, simply because we feel it should exist in the world.
 			.p-photo1
-				img(src="https://www.fillmurray.com/1920/787", alt="")
+				img(src="./img/projects/future-street/02_future.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="https://www.fillmurray.com/955/787", alt="")
+					img(src="./img/projects/future-street/03_future.jpg", alt="")
 				.p-photo2
-					img(src="https://www.fillmurray.com/955/787", alt="")
-			+slider-projects("https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
+					img(src="./img/projects/future-street/04_future.jpg", alt="")
+			+slider-projects("./img/projects/future-street/05_future.jpg", "./img/projects/future-street/06_future.jpg", "./img/projects/future-street/07_future.jpg", "./img/projects/future-street/08_future.jpg", "", "", "", "")
+			
 			//- video
-			section.video-wrapper.fill-mini.snj-col-12
-				+video-player("../img/projects/coffee/9-coffee-mini.jpg","../img/projects/coffee/9-coffee-video.mp4")
+			section.video-wrapper.future-banner-mini.snj-col-12
+				
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
