Power Horse: Images updated, added new ones and optimized others.

--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -28,16 +28,22 @@ block content
 						p Whether it was helping their booth come to life at Sole DXB or helping them tick something off their creative bucket list. Once Power Horse’s intention, and place, in the community was set, we then moved on to establishing a new design language and tone of voice. So while their competitors went extreme, we went more creative (even artsy).
 
 						p When competitors went mainstream, we went underground. It’s made the difference ever since. 
+
 			.p-photo1
-				img(src="https://www.fillmurray.com/1920/787", alt="")
+				img(src="./img/projects/power-horse/02_power.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="./img/projects/power-horse/3-power-photo.jpg", alt="")
+					img(src="./img/projects/power-horse/03_power.jpg", alt="")
 				.p-photo2
-					img(src="https://www.fillmurray.com/955/787", alt="")
-			+slider-projects("./img/projects/power-horse/5-power-slide.jpg", "./img/projects/power-horse/6-power-slide.jpg", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
-			section.video-wrapper.fill-mini.snj-col-12
-				+video-player("https://www.fillmurray.com/1920/787","../img/projects/power-horse/9-power-video.mp4")
+					img(src="./img/projects/power-horse/04_power.jpg", alt="")
+
+			+slider-projects("https://www.fillmurray.com/893/591", "./img/projects/power-horse/05_power.jpg", "./img/projects/power-horse/06_power.jpg", "./img/projects/power-horse/07_power.jpg", "", "", "", "")
+			
+
+			section.video-wrapper.powerhorse-video-mini.snj-col-12
+				+video-player("./img/projects/power-horse/09_power_mini.jpg","../img/projects/power-horse/09_power.mp4")
+			
+
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
