--- a/dev/scss/views/_project-page.scss
+++ b/dev/scss/views/_project-page.scss
@@ -396,7 +396,7 @@ section.video-wrapper{
 		}
 	}
 	&.powerhorse-video-mini{
-		// background-image: url("https://www.fillmurray.com/1920/787");
+		background-image: url("../img/projects/power-horse/09_power_mini.jpg");
 	}
 	&.contentPuma-video-mini{
 		background-image: url("https://www.fillmurray.com/1920/787");
