Puma Content: Images updated. Coffee Roasters: Video cover setup.

--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -37,7 +37,7 @@ block content
 			+slider-projects("./img/projects/coffee/5-coffee-slide.jpg", "./img/projects/coffee/6-coffee-slide.jpg", "./img/projects/coffee/7-coffee-slide.jpg", "./img/projects/coffee/8-coffee-slide.jpg", "", "", "", "")
 
 			//- video player
-			section.video-wrapper.fill-mini.snj-col-12
+			section.video-wrapper.coffee-video-mini.snj-col-12
 				+video-player("../img/projects/coffee/9-coffee-mini.jpg","../img/projects/coffee/9-coffee-video.mp4")
 				
 			//- footer
