--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -16,6 +16,8 @@ block content
 								+project-box("Project", "Instagram Launch & Management",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2017-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
+			
+
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Instagram Launch & Management 
@@ -27,17 +29,22 @@ block content
 						p We have the privilege of managing the <a href="https://www.instagram.com/pumame//">@pumame</a> account completely: strategy, content production, community management and reporting. Something that keeps us informed and sharp on a global level. 
 
 						p In just a few years, the account reached over 100k followers and continues to “put on” for the region’s talent, from photographers to musicians. It’s a project, and relationship, that has significantly helped establish our place in the market. More importantly, it has helped strengthen our relationship with the regional community of athletes, artists and creatives that we consider peers and allies. 
+			
+
 			.p-photo1
-				img(src="./img/projects/content-puma/2-content-puma-photo.jpg", alt="")
+				img(src="./img/projects/content-puma/02_puma_management.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="./img/projects/content-puma/3-content-puma-photo.jpg", alt="")
+					img(src="./img/projects/content-puma/03_puma_management.jpg", alt="")
 				.p-photo2
-					img(src="./img/projects/content-puma/4-content-puma-photo.jpg", alt="")
-			+slider-projects("./img/projects/content-puma/5-content-puma-slide.jpg", "./img/projects/content-puma/6-content-puma-slide.jpg", "./img/projects/content-puma/7-content-puma-slide.jpg", "./img/projects/content-puma/8-content-puma-slide.jpg", "", "", "", "")
+					img(src="./img/projects/content-puma/04_puma_management.jpg", alt="")
+			
 
-			section.video-wrapper.fill-mini.snj-col-12
-				+video-player("https://www.fillmurray.com/1920/787","../img/projects/content-puma/9-content-puma-video.mp4")
+			+slider-projects("./img/projects/content-puma/05_puma_management.jpg", "./img/projects/content-puma/06_puma_management.jpg", "./img/projects/content-puma/07_puma_management.jpg", "./img/projects/content-puma/08_puma_management.jpg", "", "", "", "")
+
+
+			section.video-wrapper.contentPuma-video-mini.snj-col-12
+				+video-player("./img/projects/content-puma/09_puma_management_mini.jpg","./img/projects/content-puma/09_puma_management.mp4")
 
 			//- footer
 			section.footer-project
