--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -15,6 +15,8 @@ block content
 								+project-box("Project", "Suede Guerrillas & International Women’s Day",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2017 & 2018 ",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
+			
+
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Suede Guerrillas & International Women’s Day
@@ -24,17 +26,20 @@ block content
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p The following year, we celebrated International Women’s Day by capturing the beautiful diversity of women in Dubai in the most inclusive way we could think of. Often brands will have target the same groups or expats because of their consumer strength in the country.
 						p For International Women’s Day, that wasn’t good enough for us. Instead, we celebrated nearly 30 different women, and their respective nationalities, as it’s this type of diversity that makes Dubai so special. Each woman was shot for their own portrait, with makeup colors from their particular country, and then displ ayed every single portrait at a party that featured an all-female DJ lineup.
+			
 			.p-photo1
-				img(src="./img/projects/event-puma/2-event-puma-photo.jpg", alt="")
+				img(src="./img/projects/event-puma/02_puma_event.jpg", alt="")
 			.img-wrapper
 				.p-photo3
-					img(src="./img/projects/event-puma/3-event-puma-photo.jpg", alt="")
+					img(src="./img/projects/event-puma/03_puma_event.jpg", alt="")
 				.p-photo2
-					img(src="./img/projects/event-puma/4-event-puma-photo.jpg", alt="")
-			+slider-projects("./img/projects/event-puma/5-event-puma-slide.jpg", "./img/projects/event-puma/6-event-puma-slide.jpg", "./img/projects/event-puma/7-event-puma-slide.jpg", "https://www.fillmurray.com/893/591", "", "", "", "")
+					img(src="./img/projects/event-puma/04_puma_event.jpg", alt="")
+			
+
+			+slider-projects("./img/projects/event-puma/05_puma_event.jpg", "./img/projects/event-puma/06_puma_event.jpg", "./img/projects/event-puma/07_puma_event.jpg", "./img/projects/event-puma/08_puma_event.jpg", "", "", "", "")
 			//- video
-			section.video-wrapper.fill-mini.snj-col-12
-				+video-player("https://www.fillmurray.com/1920/787","../img/projects/event-puma/9-event-puma-video.mp4")
+			section.video-wrapper.eventPuma-video-mini.snj-col-12
+				+video-player("./img/projects/event-puma/09_puma_event_mini.jpg","./img/projects/event-puma/09_puma_event.mp4")
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
